<?xml version="1.0"?>
<package format="2">
	<name>rrt_nbv_exploration_plugins</name>
	<version>0.0.0</version>
	<description>The rrt_nbv_exploration_plugins package</description>

	<maintainer email="marco@todo.todo">marco</maintainer>
	<license>TODO</license>


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>pluginlib</build_depend>
	<build_export_depend>pluginlib</build_export_depend>
	<exec_depend>pluginlib</exec_depend>
	<exec_depend>rsm_core</exec_depend>
	<build_depend>rsm_core</build_depend>
	<build_export_depend>rsm_core</build_export_depend>
	<build_depend>rsm_msgs</build_depend>
	<build_export_depend>rsm_msgs</build_export_depend>
	<exec_depend>rsm_msgs</exec_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<build_depend>rrt_nbv_exploration_msgs</build_depend>
	<build_export_depend>rrt_nbv_exploration_msgs</build_export_depend>
	<exec_depend>rrt_nbv_exploration_msgs</exec_depend>
	<build_depend>tf2_geometry_msgs</build_depend>
	<build_export_depend>tf2_geometry_msgs</build_export_depend>
	<exec_depend>tf2_geometry_msgs</exec_depend>
	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>std_msgs</exec_depend>
	<build_depend>std_srvs</build_depend>
	<build_export_depend>std_srvs</build_export_depend>
	<exec_depend>std_srvs</exec_depend>
	<build_depend>nav_core</build_depend>
	<build_export_depend>nav_core</build_export_depend>
	<exec_depend>nav_core</exec_depend>
	<build_depend>angle</build_depend>
	<build_export_depend>angle</build_export_depend>
	<exec_depend>angle</exec_depend>
	<build_depend>costmap_2d</build_depend>
	<build_export_depend>costmap_2d</build_export_depend>
	<exec_depend>costmap_2d</exec_depend>
	<build_depend>nav_msgs</build_depend>
	<build_export_depend>nav_msgs</build_export_depend>
	<exec_depend>nav_msgs</exec_depend>

	<export>
		<rsm_core plugin="${prefix}/rne_plugins.xml" />
		<nav_core plugin="${prefix}/rne_global_planner.xml" />
	</export>
</package>
