<?xml version="1.0"?>
<package format="2">
	<name>rsb_nbv_exploration</name>
	<version>1.0.0</version>
	<description>The rsb_nbv_exploration package contains RNE's main logic to build the RRG,
	evaluate each node's gain and cost, select goals, contruct a global path and visualize the RRG.</description>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/rnexploration</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/rnexploration/issues</url>
	<maintainer email="marco.stb1993@gmail.de">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.de">Marco Steinbrink</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>move_base_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>rsb_nbv_exploration_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>map_msgs</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_export_depend>actionlib</build_export_depend>
	<build_export_depend>move_base_msgs</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<build_export_depend>std_srvs</build_export_depend>
	<build_export_depend>visualization_msgs</build_export_depend>
	<build_export_depend>tf2</build_export_depend>
	<build_export_depend>tf2_ros</build_export_depend>
	<build_export_depend>rsb_nbv_exploration_msgs</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>nav_msgs</build_export_depend>
	<build_export_depend>map_msgs</build_export_depend>
	<build_export_depend>dynamic_reconfigure</build_export_depend>
	<exec_depend>actionlib</exec_depend>
	<exec_depend>move_base_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<exec_depend>rsb_nbv_exploration_msgs</exec_depend>
	<exec_depend>std_srvs</exec_depend>
	<exec_depend>tf2</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>rsb_nbv_exploration_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>map_msgs</exec_depend>
	<exec_depend>dynamic_reconfigure</exec_depend>
</package>

