<?xml version="1.0"?>
<package format="2">
	<name>rsb_nbv_exploration_plugins</name>
	<version>0.0.0</version>
	<description>The rsb_nbv_exploration_plugins package contains plugins to interface RSM,
	a service provider for RSM and a global path planner plugin.</description>
	<license>BSD</license>
	<url type="repository">https://github.com/MarcoStb1993/rnexploration</url>
	<url type="bugtracker">https://github.com/MarcoStb1993/rnexploration/issues</url>
	<maintainer email="marco.stb1993@gmail.de">Marco Steinbrink</maintainer>
	<author email="marco.stb1993@gmail.de">Marco Steinbrink</author>


	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<build_depend>pluginlib</build_depend>
	<build_export_depend>pluginlib</build_export_depend>
	<exec_depend>pluginlib</exec_depend>
	<exec_depend>rsm_core</exec_depend>
	<build_depend>rsm_core</build_depend>
	<build_export_depend>rsm_core</build_export_depend>
	<build_depend>rsm_msgs</build_depend>
	<build_export_depend>rsm_msgs</build_export_depend>
	<exec_depend>rsm_msgs</exec_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<build_depend>rsb_nbv_exploration_msgs</build_depend>
	<build_export_depend>rsb_nbv_exploration_msgs</build_export_depend>
	<exec_depend>rsb_nbv_exploration_msgs</exec_depend>
	<build_depend>tf2_geometry_msgs</build_depend>
	<build_export_depend>tf2_geometry_msgs</build_export_depend>
	<exec_depend>tf2_geometry_msgs</exec_depend>
	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>std_msgs</exec_depend>
	<build_depend>std_srvs</build_depend>
	<build_export_depend>std_srvs</build_export_depend>
	<exec_depend>std_srvs</exec_depend>
	<build_depend>nav_core</build_depend>
	<build_export_depend>nav_core</build_export_depend>
	<exec_depend>nav_core</exec_depend>
	<build_depend>angle</build_depend>
	<build_export_depend>angle</build_export_depend>
	<exec_depend>angle</exec_depend>
	<build_depend>costmap_2d</build_depend>
	<build_export_depend>costmap_2d</build_export_depend>
	<exec_depend>costmap_2d</exec_depend>
	<build_depend>nav_msgs</build_depend>
	<build_export_depend>nav_msgs</build_export_depend>
	<exec_depend>nav_msgs</exec_depend>	
	<build_depend>global_planner</build_depend>
	<build_export_depend>global_planner</build_export_depend>
	<exec_depend>global_planner</exec_depend>
	<build_depend>tf2</build_depend>
	<build_export_depend>tf2</build_export_depend>
	<exec_depend>tf2</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<build_depend>tf2_ros</build_depend>
	<build_export_depend>tf2_ros</build_export_depend>	
	<exec_depend>sensor_msgs</exec_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_export_depend>sensor_msgs</build_export_depend>	

	<export>
		<rsm_core plugin="${prefix}/rne_plugins.xml" />
		<nav_core plugin="${prefix}/rne_global_planner.xml" />
	</export>
</package>
